--- a/src/LandingPage/style.css
+++ b/src/LandingPage/style.css
@@ -3,17 +3,15 @@ font-family: 'Poppins', sans-serif; */
 
 /* Default */
 :root {
-    --fundo-branco: #fff;
-    --fundo-dark: #252323;
-    --preto: #000;
-    --marrom-claro: #b2987d;
     --fonte-normal: 'Poppins', sans-serif;
     --fonte-cursiva: 'Great Vibes', cursive;
 }
 
+
 .body {
     font-family: var(--fonte-normal);
-    background-color: var(--fundo-branco);
+    background-color: var(--fundo);
+    color: var(--cor-fonte);
     width: 100%;
     height: 100vh;
     min-width: 280px;
@@ -35,7 +33,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .logo {
@@ -48,14 +45,19 @@ button {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 5px;
-    border-radius: 20px;
+    gap: .3em;
+    padding: 7px;
+    border-radius: 30px;
     background-color: transparent;
-    border: 2px solid var(--marrom-claro)
+    border: 2px solid var(--marrom-claro);
 }
 
 .imagem-botao {
     width: 20px
+}
+
+button span {
+    color: var(--cor-fonte);
 }
 
 /* Banner */
@@ -95,4 +97,18 @@ p {
     color: var(--marrom-claro);
     font-size: 60px;
     margin-top: 60px;
+}
+
+/* Estilos --> Dark / Light */
+.light {
+    --fundo: #fff;
+    --cor-fonte: #000;
+    --marrom-claro: #b2987d;
+}
+
+.dark {
+    --fundo: #252323;
+    --cor-fonte: #fff;
+    --marrom-claro: #b2987d;
+
 }
