--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+.largura-pagina {
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 0 20px
+}
+
 .App {
   width: 100%;
   height: 100vh;
