--- a/src/LandingPage/style.css
+++ b/src/LandingPage/style.css
@@ -15,11 +15,7 @@ font-family: 'Poppins', sans-serif; */
     font-size: 18px;
 }
 
-.largura-pagina {
-    max-width: 1024px;
-    margin: 0 auto;
-    padding: 0 20px
-}
+
 
 /* Header */
 header {
@@ -33,7 +29,9 @@ header {
 }
 
 .logo {
-    width: 80px;
+    width: 100px;
+    filter: var(--filter);
+
 }
 
 /* Botao */
@@ -43,19 +41,20 @@ button {
     justify-content: space-evenly;
     align-items: center;
     gap: .3em;
-    padding: 7px;
+    padding: 10px;
     border-radius: 30px;
     background-color: transparent;
     border: 2px solid var(--marrom-claro);
 }
 
 .imagem-botao {
-    width: 20px
+    width: 15px
 }
 
 button span {
     text-transform: capitalize;
     color: var(--cor-fonte);
+    font-size: 14px;
 }
 
 /* Banner */
@@ -65,12 +64,12 @@ button span {
     height: 300px;
     background: url('../../public/assets/banner-barbearia.jpg') no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center center;
 }
 
 .conteudo {
     width: 100%;
-    padding: 4.1em 20px;
+    padding: 3.53em 20px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -102,12 +101,14 @@ p {
     --fundo: #fff;
     --cor-fonte: #000;
     --marrom-claro: #b2987d;
+    --filter: none;
 }
 
 .dark {
     --fundo: #252323;
     --cor-fonte: #fff;
     --marrom-claro: #b2987d;
+    --filter: invert();
 }
 
 /* Medias */
